# CIEVisualizer

./: .gitignore  CMakeLists.txt
src/: helper.c  helper.h  main.c
src/resources/: rgb.fs  rgb.vs
